# pkmnfusion

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
assets/pixelart/: grass_biome_4x8_16x16.pixil  grass_biome_6x_16x16.pixil  grass_biome_8x_16x16.pixil  water_biome_1x_16x16.pixil  water_biome_deep_8x_16x16.pixil
docs/: battle_system_design_summary.md  progression_system_design_summary.md
src/: components.rs  main.rs  main_test.rs  map.rs  player.rs
src/tiles/: flowers.rs  grass.rs  mod.rs  water.rs
tools/: generate_tileset.py
