[package]
name = "pkmnfusion"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
bevy_ecs_tilemap = "0.18"

# Faster debug builds — critical for Bevy
[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2

# Dynamic linking for faster recompiles (dev only)
# Usage: cargo run --features dev
[features]
default = []
dev = ["bevy/dynamic_linking"]
